kubernetes/apps/network/external-services/app/truenas/endpoints.yaml
---
apiVersion: v1
kind: Endpoints
metadata:
  name: truenas
subsets:
  - addresses:
      - ip: "${SECRET_TRUENAS_IP}"
    ports:
      - name: http
        port: 80
        protocol: TCP
