kubernetes/apps/network/external-services/app/truenas/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: truenas
  annotations:
    external-dns.alpha.kubernetes.io/hostname: citadel.${SECRET_DOMAIN}
    internal-dns.alpha.kubernetes.io/target: internal.${SECRET_DOMAIN}
spec:
  type: ClusterIP
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      appProtocol: http
