kubernetes/apps/network/external-services/app/truenas/backendtrafficpolicy.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.home-operations.com/gateway.envoyproxy.io/backendtrafficpolicy_v1alpha1.json
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: BackendTrafficPolicy
metadata:
  name: truenas-backend
  namespace: network
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: truenas
  useClientProtocol: true
  connection:
    bufferLimit: 8Mi
  timeout:
    http:
      requestTimeout: 0s
      connectionIdleTimeout: 3600s
