kubernetes/apps/network/external-services/app/truenas/tlsroute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: TLSRoute
metadata:
  name: truenas
  labels:
    app.kubernetes.io/name: truenas
    app.kubernetes.io/instance: truenas
spec:
  parentRefs:
    - name: internal
      namespace: network
      sectionName: https
  hostnames:
    - citadel.${SECRET_DOMAIN}
  rules:
    - backendRefs:
        - name: truenas
          port: 443
